--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -10,24 +10,30 @@
   </head>
   <body>
     <header>
-      <a href="../index.html"><img class="logo1" src="../img/nodoslogoescrito.png" alt="logo"/></a>
-      <nav>
-        <ul class="menu">
-          <li>
-            <a class="menu-link" href="./prestamos.html">PRESTAMO</a>
-          </li>
-          <li>
-            <a class="menu-link" href="./contacto.html">CONTACTO</a>
-          </li>
-          <li>
-            <a class="menu-link" href="./nosotros.html">NOSOTROS</a>
-          </li>
-          <li>
-            <a class="menu-link active" href="./preguntas.html">PREGUNTAS</a>
-          </li>
-        </ul>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html"><img class="logo1" src="../img/nodoslogoescrito.png" alt="logo"/></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./prestamos.html">PRESTAMO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contacto.html">CONTACTO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./nosotros.html">NOSOTROS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./preguntas.html">PREGUNTAS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
-      <a href="../index.html"><img class="logo2" src="../img/nodoslogoescrito.png" alt="logo"/></a>
     </header>
     <main>
       <form action="./enviar-formulario.html" method="get">
