--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -32,6 +32,7 @@
     <main>
       <h1>Datos Personales</h1>
       <form action="./enviar-formulario.html" method="get">
+        <article class="m-4">
         <h2>Formulario de Contacto:</h2>
         <div class="datos">
           <label for="nombre" class="datos2" type="text">Nombre</label>
@@ -48,7 +49,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.7648414363903!2d-62.0759759!3d-31.420604500000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cb282090e64633%3A0x24bf29a7465a2d4d!2sAv.%20Garibaldi%201106%2C%20X2400%20San%20Francisco%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1696269609325!5m2!1ses-419!2sar" width="600" height="300" style="border: 0" allowfullscreen="" loading="lazy"referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
-        <div>
+        <div class="ingresostotales2">
           <p>Sus ingresos son por:</p>
           <input type="checkbox" name="Trabajo independiente" id="Trabajo independiente"/>
           <label for="Trabajo independiente" Trabajo independiente>Trabajo independiente</label>
@@ -57,21 +58,23 @@
           <input type="checkbox" name="Jubilación" id="Jubilación"/>
           <label for="Jubilación" Jubilación>Jubilación</label>
         </div>
-        <div>
+        <div class="ingresostotales">
           <p>Ingresos Totales</p>
-          <select>
-            <option value="menor a $100.000">manor a $100.000</option>
-            <option value="entre $100.000 y $200.000">entre $100.000 y $200.000</option>
-            <option value="entre $200.000 y $300.000">entre $200.000 y $300.000</option>
-            <option value="entre $300.000 y $400.000">entre $300.000 y $400.000</option>
-            <option value="mayor a $400.000">mayor a $400.000</option>
+          <select class="form-select" aria-label="Default select example">
+            <option selected>Seleccionar</option>
+            <option value="1">menor a $100.000</option>
+            <option value="2">entre $100.000 y $200.000</option>
+            <option value="3">entre $200.000 y $300.000</option>
+            <option value="4">entre $300.000 y $400.000</option>
+            <option value="5">mayor a $400.000</option>
           </select>
-        </div>
+          </div>
         <div>
           <input type="reset" value="borrar" />
           <input type="submit" value="enviar" />
         </div>
       </form>
+    </article>
     </main>
     <footer>
       <section class="redes">
