--- a/index.html
+++ b/index.html
@@ -6,69 +6,92 @@
     <title>NODOS</title>
     <link rel="shortcut icon" href="./img/nodoslogoescrito.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="./estilos/estilos.css" />
+    <link rel="stylesheet" href="./estilos/estilo.css" />
   </head>
   <body>
-    <header>
-      <a href="./index.html"><img class="logo1"src="./img/nodoslogoescrito.png" alt="logo"/></a>
-      <nav>
-        <ul class="menu">
-          <li>
-            <a href="./pages/prestamos.html">PRESTAMO</a>
-          </li>
-          <li>
-            <a href="./pages/contacto.html">CONTACTO</a>
-          </li>
-          <li>
-            <a href="./pages/nosotros.html">NOSOTROS</a>
-          </li>
-          <li>
-            <a href="./pages/preguntas.html">PREGUNTAS</a>
-          </li>
-        </ul>
+    <header class="cabeza">
+      <nav class="navbar navbar-expand-md bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="./index.html"><img class="logo1" src="./img/nodoslogoescrito.png" alt="logo"/></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./pages/prestamos.html">PRESTAMO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/nosotros.html">NOSOTROS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./pages/preguntas.html">PREGUNTAS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
-      <a href="./index.html"><img class="logo2" src="./img/nodoslogoescrito.png" alt="logo"/></a>
     </header>
     <main>
-      <div class="subtitulo">
-        <p>Llevate tu préstamo al instante en cuotas fijas</p>
-      </div>
-
-      <section class="medio">
-        <ul class="caja1">
-          <li>100.000 en ctas. de 10.000</li>
-          <li>200.000 en ctas. de 20.000</li>
-          <li>300.000 en ctas. de 30.000</li>
-          <li>400.000 en ctas. de 40.000</li>
-          <li>500.000 en ctas. de 50.000</li>
-          <li>600.000 en ctas. de 60.000</li>
-        </ul>
-        <img class="gris" src="./img/IMAGENGRIS.png" alt="imagengris"/>
-        <img class="mano" src="./img/darselamano.jpg" alt="darselamano"/>
-      </section>
-      <p class="caja2">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem
-        officia et, porro nostrum fugiat cum animi? Earum nesciunt enim, rem
-        nostrum unde ullam fugit laudantium architecto iure blanditiis, quas
-        culpa, et animi sunt asperiores repellendus dolor! Aspernatur fugiat
-        unde facilis libero quo, beatae nostrum minima vitae, eveniet, assumenda
-        nobis. Laborum dignissimos sapiente qui ut aliquid deserunt ipsum harum.
-        Ex laborum similique magnam deserunt quasi iure pariatur. Cupiditate
-        veritatis at sequi unde voluptatum placeat perferendis nisi a ea
-        quisquam velit magnam id fuga rem iusto enim eos quos dolore aperiam,
-        quia dolor nesciunt eaque asperiores alias. Rem ullam deleniti
-        voluptatibus nemo illum reiciendis iure consequatur dolorum incidunt
-        vitae, eius recusandae amet vel perspiciatis tenetur dolor veniam
-        sapiente odit fuga quo suscipit aut velit laboriosam aperiam. Illo
-        voluptatibus illum cum ratione ex autem explicabo, totam vero rerum
-        nobis rem et suscipit tempore commodi optio sapiente facilis accusantium
-        iure dolore voluptate voluptates soluta? Omnis vel ad eligendi at illo
-        dolorum earum amet tempore obcaecati, magnam esse, nesciunt iusto
-        recusandae. Asperiores maiores a quasi repellendus, nobis tempore iste
-        cupiditate. Cum corrupti doloribus quod obcaecati itaque nostrum nisi!
-        Ipsa quos voluptate corrupti sunt? Assumenda consequuntur libero dolorum
-        dicta est, molestiae quos maxime at nobis error.
-      </p>
+      <img class="main-img" src="./img/fondopesos.jpg" alt="fondopesos"/>
+        <div class="subtitulo">
+          <h1>Llevate tu préstamo al instante</h1>
+        </div>
+          <div class="medio">
+            <div class="gris-1"> 
+              <img class="gris" src="./img/IMAGENGRIS.png" alt="imagengris"/>
+            </div>
+            <div id="carouselExampleCaptions" class="carousel slide">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./img/200.png" class="d-block w-100" alt="200mil">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>En Cuotas Fijas</h5>
+                    <p>De $20.000</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="./img/300.png" class="d-block w-100" alt="300mil">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>En Cuotas Fijas</h5>
+                    <p>De $30.000</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="./img/400.png" class="d-block w-100" alt="400mil">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>En Cuotas Fijas</h5>
+                    <p>De $40.000</p>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+            <div class="mano-1">
+              <img class="mano" src="./img/darselamano.jpg" alt="darselamano"/>
+            </div>
+          </div>
+          <p class="caja2">
+            “Utilizamos el servicio de Scoring de Infoexperto como medio de clasificación en nuestro CRM, que nos permite apuntar a la eficiencia en la cobranza. Valoramos la precisión de los datos referentes a personas relacionadas, e-mails, teléfonos declarados e información de Anses Estamos muy satisfechos con el servicio que prestan.”
+            "No se trata sólo de usar la última tecnología, sino de plantear soluciones creativas y originales, basadas en la situación de cada cliente. Las recetas universales ya no funcionan como antes, por eso es necesario descubrir nuevas y particulares formas de entender la realidad."
+            "En un mundo en el que los cambios se dan de manera cada vez más acelerada, entendemos que es necesario y fundamental, adelantarse a las tendencias. Se requiere una mayor capacidad de adaptación a las nuevas realidades y en Infoexperto vamos por ese camino."
+          </p>
+      </img>  
     </main>
     <footer>
       <section class="redes">
