--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,45 +6,53 @@
     <title>NODOS CONTACTO</title>
     <link rel="shortcut icon" href="../img/nodoslogoescrito.png" type="image/x-icon"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/estilos.css" />
+    <link rel="stylesheet" href="../estilos/estilo.css" />
   </head>
   <body>
-    <header>
-      <a href="../index.html"><img class="logo1" src="../img/nodoslogoescrito.png" alt="logo"/></a>
-      <nav>
-        <ul class="menu">
-          <li>
-            <a class="menu-link" href="./prestamos.html">PRESTAMO</a>
-          </li>
-          <li>
-            <a class="menu-link active" href="./contacto.html">CONTACTO</a>
-          </li>
-          <li>
-            <a class="menu-link" href="./nosotros.html">NOSOTROS</a>
-          </li>
-          <li>
-            <a class="menu-link" href="./preguntas.html">PREGUNTAS</a>
-          </li>
-        </ul>
+    <header class="cabeza">
+      <nav class="navbar navbar-expand-md bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html"><img class="logo1" src="../img/nodoslogoescrito.png" alt="logo"/></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/prestamos.html">PRESTAMO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/preguntas.html">PREGUNTAS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
-      <a href="../index.html"><img class="logo2" src="../img/nodoslogoescrito.png" alt="logo"/></a>
     </header>
     <main>
       <h1>Datos Personales</h1>
       <form action="./enviar-formulario.html" method="get">
         <article class="m-4">
         <h2>Formulario de Contacto:</h2>
-        <div class="datos">
-          <label for="nombre" class="datos2" type="text">Nombre</label>
-          <input id="nombre" type="text" placeholder="ingrese nombre" required/>
-          <label for="apellido" class="datos2" type="text">Apellido</label>
-          <input id="apellido" type="text" placeholder="ingrese apellido" required/>
-          <label for="E-mail" class="datos2" type="text">E-mail</label>
-          <input id="E-mail" type="email" placeholder="ingrese mail" required/>
-          <label for="Celular" class="datos2" type="number">Celular</label>
-          <input id="Celular" type="number" placeholder="ingrese teléfono" required/>
-          <label type="text" class="datos2">Consulta</label>
-          <textarea cols="40" rows="10"></textarea>
+        <div class="datos-2">
+          <div class="form-2">
+            <label for="nombre" class="datos2" type="text">Nombre</label>
+            <input id="nombre" type="text" placeholder="ingrese nombre" required/>
+            <label for="apellido" class="datos2" type="text">Apellido</label>
+            <input id="apellido" type="text" placeholder="ingrese apellido" required/>
+            <label for="E-mail" class="datos2" type="text">E-mail</label>
+            <input id="E-mail" type="email" placeholder="ingrese mail" required/>
+            <label for="Celular" class="datos2" type="number">Celular</label>
+            <input id="Celular" type="number" placeholder="ingrese teléfono" required/>
+            <label type="text" class="datos2">Consulta</label>
+            <textarea cols="40" rows="10"></textarea>
+          </div>
           <div class="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.7648414363903!2d-62.0759759!3d-31.420604500000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95cb282090e64633%3A0x24bf29a7465a2d4d!2sAv.%20Garibaldi%201106%2C%20X2400%20San%20Francisco%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1696269609325!5m2!1ses-419!2sar" width="600" height="300" style="border: 0" allowfullscreen="" loading="lazy"referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
