--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,28 +6,95 @@
     <title>NODOS NOSOTROS</title>
     <link rel="shortcut icon" href="../img/nodoslogoescrito.png" type="image/x-icon"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/estilos.css" />
+    <link rel="stylesheet" href="../estilos/estilo.css"/>
   </head>
   <body>
-    <nav class="nosotrosgrid">
-      <p <div class="hijo nosotroslogo">Estamos comprometidos con garantizar operaciones financieras que
-        satisfagan las expectativas de cada uno de nuestros clientes.
-        También es conectar a cada persona con un espacio donde pueda
-        desarrollar una vida feliz, un sueñoo un negocio deseado. Buscamos
-        desafíos e ideas enriquecedoras, a las cuales aportar nuestra
-        experiencia y profesionalismo, brindando como resultado un gran
-        valor agregado. Con ello garantizamos inversiones seguras, negocios
-        rentables y soluciones financieras para cada necesidad</p></div>
-      <a <div class="hijo nosotroscontacto"  href="./contacto.html"> <img class="logotelefono" src="../img/telefono.png" alt="telefono"> CONTACTO</a></div>
-      <a <div class="hijo nosotrosnosotros"  href="./nosotros.html"> <img class="logotexto" src="../img/texto.jpg" alt="texto"> NOSOTROS</a></div>
-      <a <div class="hijo nosotrospreguntasfrecuentes"  href="./preguntas.html"> <img class="logopregunta" src="../img/pregunta.jpg" alt="pregunta"> PREGUNTAS</a></div>
-      <a <div class="hijo nosotrosprestamoss"  href="./prestamos.html"> <img class="logopesos" src="../img/pesos.jpg" alt="pesos"> PRESTAMO</a></div>
-    </nav>
+    <header class="cabeza">
+      <nav class="navbar navbar-expand-md bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html"><img class="logo1" src="../img/nodoslogoescrito.png" alt="logo"/></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../pages/prestamos.html">PRESTAMO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../pages/preguntas.html">PREGUNTAS</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <main>
+      <div class="nosotrosflex">
+        <h4 class="quienessomos">Quienes Somos</h4>
+        <div class="nosotroslogo">
+          <img src="../img/logoblanco.jpg" alt="logo">
+        </div>
+      </div>
+    <p class="nosotrostexto">Estamos comprometidos con garantizar operaciones financieras que
+      satisfagan las expectativas de cada uno de nuestros clientes.
+      También es conectar a cada persona con un espacio donde pueda
+      desarrollar una vida feliz, un sueñoo un negocio deseado. Buscamos
+      desafíos e ideas enriquecedoras, a las cuales aportar nuestra
+      experiencia y profesionalismo, brindando como resultado un gran
+      valor agregado. Con ello <span class="resaltar">garantizamos inversiones seguras, negocios
+      rentables y soluciones financieras</span> para cada necesidad</p> 
      
     </main>
     <footer>
-     
+      <section class="redes">
+        <ul class="redess">
+          <li>
+            <a href="https://www.facebook.com/" target="_blank"><img class="facebook" src="../img/facebook.png" alt="facebook"/></a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/" target="_blank"><img class="instagram" src="../img/instagram.png" alt="instagram"/></a>
+          </li>
+          <li>
+            <a href="https://wa.me/543564415853" target="_blank"><img class="whatsapp" src="../img/whatsapp.png" alt="whatsapp"/></a>
+          </li>
+        </ul>
+      </section>
+      El otorgamiento de los créditos se encontrara sujeto al cumplimiento de
+      las condiciones de contratación dispuestas por NODOS S.A.S. Cuit:
+      30-64105617-7. Ruta Nacional 168 km 473,6 - (CP S3000XBL) Santa Fe,
+      licenciataria de la marca registrada Crédito Argentino. La financiación
+      que otorgue CFN S.A. no importará garantía de buen funcionamiento de los
+      productos o servicios que adquiera el cliente. Este aviso no es ni intenta
+      ser una oferta, ni una invitación de compra o adhesión, ni cabe que se le
+      de el carácter de publicidad, en los términos y con los alcances
+      establecidos en Ley Nº 24.240 (arts. 7 y 8). Las condiciones de
+      contratación, información al consumidor, vigencia de promociones y stock y
+      nómina de los Comercios Colocadores de Crédito pueden ser consultadas en
+      las sucursales de Crédito Argentino o comunicándose al 0800 555 0090.El
+      titular de los datos personales tiene la facultad de ejercer el derecho de
+      acceso a los mismos en forma gratuita a intervalos no inferiores a seis
+      meses, salvo que se acredite un interés legítimo al efecto conforme lo
+      establecido en el Artículo 14, Inciso 3 de la Ley Nº 25.326, pudiendo
+      solicitar el retiro o bloqueo, total o parcial, de su nombre de nuestra
+      base de datos comunicándose al 0342-4500901, ingresando en
+      www.creditoargentino.com.ar, o concurriendo personalmente a cualquiera de
+      las sucursales de Crédito Argentino. Ley 25.326 - ART. 27. - INC. 3. El
+      titular podrá en cualquier momento solicitar el retiro o bloqueo de su
+      nombre de los bancos de datos a los que se refiere el presente artículo.
+      Decreto 1558/01 - ART. 27. - 3er. párrafo. En toda comunicación con fines
+      de publicidad que se realice por correo, teléfono, correo electrónico,
+      Internet u otro medio a distancia a conocer, se deberá indicar, en forma
+      expresa y destacada, la posibilidad del titular del dato de solicitar el
+      retiro o bloqueo, total o parcial, de su nombre de la base de datos. A
+      pedido del interesado, se deberá informar el nombre del responsable o
+      usuario del banco de datos que proveyó la información.
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
