--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -6,11 +6,11 @@
     <title>NODOS PREGUNTAS</title>
     <link rel="shortcut icon" href="../img/nodoslogoescrito.png" type="image/x-icon"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../estilos/estilos.css" />
+    <link rel="stylesheet" href="../estilos/estilo.css" />
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <header class="cabeza">
+      <nav class="navbar navbar-expand-md bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"><img class="logo1" src="../img/nodoslogoescrito.png" alt="logo"/></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,16 +19,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./prestamos.html">PRESTAMO</a>
+                <a class="nav-link active" aria-current="page" href="../pages/prestamos.html">PRESTAMO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contacto.html">CONTACTO</a>
+                <a class="nav-link" href="../pages/contacto.html">CONTACTO</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./nosotros.html">NOSOTROS</a>
+                <a class="nav-link" href="../pages/nosotros.html">NOSOTROS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./preguntas.html">PREGUNTAS</a>
+                <a class="nav-link" href="../pages/preguntas.html">PREGUNTAS</a>
               </li>
             </ul>
           </div>
