--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="main1">
         <div class="subtitulo">
           <h1>Llevate tu préstamo al instante</h1>
         </div>
