--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </nav>
     </header>
     <main class="main1">
+      <div class="imagen" >
         <div class="subtitulo">
           <h1 class="llevatetuprestamo" >Llevate tu préstamo al instante</h1>
         </div>
@@ -92,6 +93,7 @@
             "No se trata sólo de usar la última tecnología, sino de plantear soluciones creativas y originales, basadas en la situación de cada cliente. Las recetas universales ya no funcionan como antes, por eso es necesario descubrir nuevas y particulares formas de entender la realidad."
             "En un mundo en el que los cambios se dan de manera cada vez más acelerada, entendemos que es necesario y fundamental, adelantarse a las tendencias. Se requiere una mayor capacidad de adaptación a las nuevas realidades y en Infoexperto vamos por ese camino."
           </p>
+      </div>    
     </main>
     <footer>
       <section class="redes">
